[gd_scene load_steps=3 format=3 uid="uid://dwrv3km8f54bh"]

[ext_resource type="Script" path="res://game/tongue/tongue.gd" id="1_tongue"]
[ext_resource type="AudioStream" path="res://assets/sounds/catch.wav" id="3_catch"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tongue"]
size = Vector2(100, 8)

[node name="Tongue" type="Area2D"]
script = ExtResource("1_tongue")

[node name="TongueLine" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 100, 0)
width = 6.0
default_color = Color(0.91, 0.12, 0.39, 1)

[node name="TongueTip" type="Polygon2D" parent="."]
position = Vector2(100, 0)
color = Color(0.91, 0.12, 0.39, 1)
polygon = PackedVector2Array(-4, -5, 8, 0, -4, 5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(50, 0)
shape = SubResource("RectangleShape2D_tongue")
disabled = true

[node name="CatchSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_catch")
volume_db = -5.0
